--- a/sample_config.env
+++ b/sample_config.env
@@ -2,18 +2,18 @@
 # ----- "" STR -----   INT ------------------
 
 # bot
-BOT_TOKEN = ""                         # STR Get from > https://t.me/BotFather
+BOT_TOKEN = "6302602961:AAGcNICFMYcXxxM8canp1FzgDSnNO1Y_IS4"                         # STR Get from > https://t.me/BotFather
 OWNER_ID =                             # INT After bot starts use /id
-OWNER_USERNAME = ""                    # STR without @ eg. bishalqx980 not @bishalqx980
-BOT_PIC = ""                           # STR image link
+OWNER_USERNAME = "amkidbot"                    # STR without @ eg. bishalqx980 not @bishalqx980
+BOT_PIC = "https://telegra.ph/file/e4bcfe04f58d0799abbd5.jpg"                           # STR image link
 WELCOME_IMG = "true"                   # BOLLEAN true or false
-GITHUB_REPO = ""                       # STR your github repo link
+GITHUB_REPO = "https://github.com/bishalqx980/tgbot"                       # STR your github repo link
 
 # database
-MONGODB_URI = ""                      # STR Get from > https://www.mongodb.com/
-DB_NAME = ""                          # STR Anything you like (unchangeable)
+MONGODB_URI = "mongodb+srv://kidprobot:kidprobot@cluster0.ml5zdk0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                      # STR Get from > https://www.mongodb.com/
+DB_NAME = "kidprobot"                          # STR Anything you like (unchangeable)
 
 # api's
-SHORTENER_API_KEY = ""                # STR Get from > https://shrinkme.io/
-OMDB_API = ""                         # STR Get from > https://www.omdbapi.com/
-WEATHER_API_KEY = ""                  # STR Get from > https://www.weatherapi.com/
+SHORTENER_API_KEY = "45351f0601608190ba4dd1ca7273ef33971b62e1"                # STR Get from > https://shrinkme.io/
+OMDB_API = "http://www.omdbapi.com/?i=tt3896198&apikey=18b6ccf9"                         # STR Get from > https://www.omdbapi.com/
+WEATHER_API_KEY = "03bd76da233745b690f133109243005"                  # STR Get from > https://www.weatherapi.com/
